[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sanitycheckhaha"
authors = ["Tyler Gaw"]
maintainers = ["Tyler Gaw"]
description = "Test of a commandline feature python package"
readme = "README.md"
version = "0.0.1"
keywords = ["example"]
license = "GPL-3"
classifiers = [ "Programming Language :: Python :: 3", ]
homepage = "https://github.com/tagaw/sanitycheckhaha"
repository = "https://github.com/tagaw/sanitycheckhaha" 

[tool.poetry.scripts]
# sanitycheckhaha: cmd; sanitycheckhaha: package; ParseStealth: .py
sanitycheckhaha = "sanitycheckhaha.sanitycheckhaha:main"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/sanitycheckhaha/__init__.py" = ["{version}"]

